aws/eks/deploy/manifest/postgres/sample2/deployment_pg.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-eks-csi
  namespace: ${EKS_NAMESPACE}
  labels:
    name: ${EKS_APP_NAME}-pg
spec:
  replicas: 3
  selector:
    matchLabels:
      name: ${EKS_APP_NAME}-pg
  template:
    metadata:
      labels:
        name: ${EKS_APP_NAME}-pg
    spec:
      containers:
        - image: postgres:11
          name: postgres-eks-csi
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-stateful-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-stateful-data
          persistentVolumeClaim:
            claimName: podpvc
