aws/eks/deploy/manifest/postgres/sample2/service_pg.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-eks-csi-svc
  namespace: ${EKS_NAMESPACE}
  labels:
    name: ${EKS_APP_NAME}-pg
spec:
  ports:
    - port: 5432
  type: LoadBalancer
  selector:
    name: ${EKS_APP_NAME}-pg
